Responsive CSS addition

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="style.css">
-	<!-- <link rel="stylesheet" href="responsive.css"> -->
+	<link rel="stylesheet" href="responsive.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,8 +16,14 @@
 		<ul class="dropdown">
 			<li> Animal Clicker </li>
 			<li> Art Portfolio </li>
-			<li> Restroom Rater </li>
+			<li> Broken Headphones </li>
 			<li> Concentration Game </li>
+			<li> eBay Calculator </li>
+			<li> Frogger Game </li>
+			<li> HTML Email Blast Ad </li>
+			<li> Responsive News Site </li>
+			<li> Restroom Rater </li>
+			<li> Sample Portfolio Page </li>
 		</ul>
 	</nav>
 	</div>
